--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,9 @@
 <html class="no-js">
 
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8">
-    <title></title>
+    <title>bunchy</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
