--- a/app/index.html
+++ b/app/index.html
@@ -116,6 +116,8 @@
     <script src="scripts/controllers/register.js"></script>
     <script src="scripts/controllers/bunchcreate.js"></script>
     <script src="scripts/controllers/locationset.js"></script>
+    <script src="scripts/controllers/myteams.js"></script>
+    <script src="scripts/controllers/addride.js"></script>
     <!-- endbuild -->
 
 </body>
