--- a/app/index.html
+++ b/app/index.html
@@ -118,6 +118,7 @@
     <script src="scripts/controllers/locationset.js"></script>
     <script src="scripts/controllers/myteams.js"></script>
     <script src="scripts/controllers/addride.js"></script>
+    <script src="scripts/controllers/comments.js"></script>
     <!-- endbuild -->
 
 </body>
