Add ride details.

--- a/app/index.html
+++ b/app/index.html
@@ -119,6 +119,7 @@
     <script src="scripts/controllers/myteams.js"></script>
     <script src="scripts/controllers/addride.js"></script>
     <script src="scripts/controllers/comments.js"></script>
+    <script src="scripts/controllers/ridedetails.js"></script>
     <!-- endbuild -->
 
 </body>
