--- a/app/index.html
+++ b/app/index.html
@@ -107,6 +107,7 @@
     <script src="scripts/services/locationservices.js"></script>
     <script src="scripts/services/rideservices.js"></script>
     <script src="scripts/services/bunchservices.js"></script>
+    <script src="scripts/services/friendservices.js"></script>
     <script src="scripts/services/authinterceptor.js"></script>
     <script src="scripts/controllers/header.js"></script>
     <script src="scripts/controllers/logout.js"></script>
@@ -120,6 +121,7 @@
     <script src="scripts/controllers/addride.js"></script>
     <script src="scripts/controllers/comments.js"></script>
     <script src="scripts/controllers/ridedetails.js"></script>
+    <script src="scripts/controllers/friends.js"></script>
     <!-- endbuild -->
 
 </body>
