--- a/app/index.html
+++ b/app/index.html
@@ -122,6 +122,7 @@
     <script src="scripts/controllers/comments.js"></script>
     <script src="scripts/controllers/ridedetails.js"></script>
     <script src="scripts/controllers/friends.js"></script>
+    <script src="scripts/controllers/editbunch.js"></script>
     <!-- endbuild -->
 
 </body>
